WISH: coloured pastebin
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts
TODO: decrqm http://ue.tst.eu/71d7dbd1fcfeaa7d2a4b96eb957d570c.txt
TODO: perl-shell-window? perl-unix-socket?
TODO: command line editing when icanon?

TODO: perl selection object creation/destruction
        - fix alpha channel support. Premultiply alpha in colours if the visual
          supports an alpha channel, as xrender expects premultiplied alpha
          (Emanuele Giaquinta).
        - fix reply to a selection request sent by an obsolete client
          such as syncterm (patch by Marcin Cieslak).
	- fix crash when the window is resized and the overlay is active
	  (Emanuele Giaquinta, reported by Ryan Kavanagh).
        - match character-wise rather than byte-wise in selection
          extension again. perl 5.8.9+ is required to avoid extreme
          slowdowns. Fixes debian bugs #523072, #616463.
        - fix a possible crash if the INCR transfer process for a
          selection property timeouts and at least one chunk is
          received. (Emanuele Giaquinta)
	- work around a memory corruption bug in xorg's XrmSetDatabase (apparently
          broken since http://lists.freedesktop.org/archives/xorg-commit-diffs/2004-March/000239.html).
        - fix memory corruption bug when custom command sequences bound to keys
          were injected into an already-full pty input buffer.
        - gdk-pixbuf is autodetected by default and preferred over libafterimage.
        - do not prepend a newline to the selection text when the starting line
          of the selection is not highlighted (Emanuele Giaquinta).
	- don't swap perl env with real env, save and restore it, just in case
          we ever get recursive perl invocations. also saves a bit of codespace
          with gcc.
        - fix various memory leaks (Emanuele Giaquinta).